# siigix

./: .gitignore  CMakeLists.txt  CMakeSources.cmake  Config.cmake.in  README.md  save  siigixTargets.cmake
Crypto/: Crypto.hpp
Data/: CMakeLists.txt
Data/include/siigix/Data/: Database.hpp  Markup.hpp
Data/include/siigix/Data/Markup/: MarkupImpex.hpp  MarkupObject.hpp  MarkupParser.hpp  MarkupParserFactory.hpp  MarkupSignatures.hpp
Data/src/: MarkupImpex.cpp  MarkupObject.cpp  MarkupParser.cpp  MarkupSignatures.cpp
Data/test/: CMakeLists.txt  config.sgx  xcfg_read.cpp
General/: CMakeLists.txt
General/include/siigix/General/: BitFlag.hpp  ByteOrder.hpp  Command.hpp  Config.hpp  ConfigReader.hpp  ConfigSignatures.hpp  Formatter.hpp  Logger.hpp  MarkupObject.hpp  MarkupReader.hpp  MarkupSignatures.hpp  Notifier.hpp  Status.hpp  Types.hpp  eprintf.hpp
General/src/: Config.cpp  ConfigReader.cpp  ConfigSignatures.cpp  Encoding.cpp  Formatter.cpp  MarkupObject.cpp  MarkupReader.cpp  MarkupSignatures.cpp  ThreadPool.cpp
General/test/: CMakeLists.txt  config.sgx  xcfg_read.cpp
Net/: CMakeLists.txt
Net/include/siigix/Net/: Client.hpp  DNS.hpp  HostEntry.hpp  INetDefs.hpp  IPAddress.hpp  Protocol.hpp  Server.hpp  ServerConfig.hpp  Socket.hpp  Socket.inl  SocketAddress.hpp  SocketOptions.hpp
Net/src/: DNS.cpp  HostEntry.cpp  INData.cpp  IPAddress.cpp  Protocol.cpp  Server.cpp  ServerClient.cpp  Socket.cpp  SocketAddress.cpp
client/: CMakeLists.txt
client/include/: Client.hpp  client.hpp
client/include/client/: client.hpp
examples/: CMakeLists.txt  ex_client.cpp  ex_server.cpp
general/: CMakeLists.txt
general/include/: General.hpp
general/include/general/: INData.hpp  IOBuff.hpp  Protocol.hpp  Socket.hpp  Status.hpp  ThreadPool.hpp
general/src/: INData.cpp  IOBuff.cpp  Protocol.cpp  Socket.cpp  ThreadPool.cpp
include/siigix/: General.hpp
include/siigix/General/: ByteOrder.hpp  Config.hpp  ConfigReader.hpp  ConfigSignatures.hpp  Encoding.hpp  Formatter.hpp  TextConverter.hpp  ThreadPool.hpp  Types.hpp
include/siigix/Net/: DNS.hpp  INData.hpp  INetDefs.hpp  IPAddress.hpp  Server.hpp  ServerSettings.hpp  ServerWorkDirectory.hpp  Socket.hpp  SocketAddress.hpp
include/siigix/general/: BitFlag.hpp  IOBuff.hpp  Protocol.hpp  Socket.hpp  Socket.inl  ThreadPool.hpp  Utils.hpp
include/siigix/server/: Server.hpp  Server.inl
include/siigix/tcp-server/: Server.hpp
include/tcp-server/: server.hpp  socket.hpp  threadPool.hpp
lib/: General.0.0.1  Net  Net.0.0.1  client  client.0.0.1  general  general.0.0.1  server  server.0.0.1  tcp-server  tcp-server.0.0.1
server/: CMakeLists.txt
server/include/: Server.hpp
server/include/server/: Server.hpp  Server.inl  ServerClient.inl  ServerSettings.hpp
server/src/: Server.cpp  ServerClient.cpp
tcp-client/include/: client.hpp
tcp-server/: CMakeLists.txt
tcp-server/include/: tcp-server.hpp
tcp-server/include/tcp-server/: Server.hpp
tcp-server/src/: Server.cpp  ServerClient.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_client.cpp
test/tcp-server/: CMakeLists.txt
test/tcp-server/include/: tcp-server.hpp
test/tcp-server/include/tcp-server/: bitflag.hpp  iobuff.hpp  server.hpp  status.hpp  types.hpp
test/tcp-server/src/: iobuff.cpp  server.cpp  serverClient.cpp  socket.cpp  threadPool.cpp
